[gd_scene load_steps=4 format=3 uid="uid://b7038o1t6lkhh"]

[ext_resource type="Texture2D" uid="uid://ueu35wl3ucup" path="res://Images/focus_knob.png" id="1_2o7ui"]
[ext_resource type="Script" path="res://Scripts/focus_control.gd" id="1_vfl2b"]
[ext_resource type="Texture2D" uid="uid://6dai70p6cl8w" path="res://Images/focus_outer_area.png" id="3_l063a"]

[node name="focus_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 5.0
offset_right = 3.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vfl2b")

[node name="focus_knob" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(649.55, 372.28)
scale = Vector2(0.771, 0.754403)
texture = ExtResource("1_2o7ui")

[node name="right_area" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 648.0
offset_top = 336.0
offset_right = 687.0
offset_bottom = 408.0

[node name="left_area" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 612.0
offset_top = 336.0
offset_right = 648.0
offset_bottom = 407.0

[node name="Focus_outer_area" type="Sprite2D" parent="."]
position = Vector2(642, 332)
scale = Vector2(0.183809, 0.183809)
texture = ExtResource("3_l063a")
